Update server about page links

--- a/server/src/assets/about.html
+++ b/server/src/assets/about.html
@@ -63,11 +63,11 @@
             <table>
                 <tr>
                     <td>repository</td>
-                    <td><a href="https://github.com/olybri/minestats">olybri/minestats</a></td>
+                    <td><a href="https://github.com/loriswit/minestats">loriswit/minestats</a></td>
                 </tr>
                 <tr>
                     <td>demo</td>
-                    <td><a href="https://olybri.github.io/minesport">minesport</a></td>
+                    <td><a href="http://stats.mc.loriswit.com/">super chouette</a></td>
                 </tr>
             </table>
         </section>
